# example

./: CMakeLists.txt  README.md  tags
cmake/: CMakeLists_All.txt  CMakeLists_GNU.txt  CMakeLists_MSVC.txt  CMakeLists_cross.txt  aarch64-linux-gnu-gcc.cmake  external-gtest.cmake
test/: CMakeLists.txt  gtest_ex1.cpp  gtest_ex2.cpp  gtest_ex3.cpp
windows/cmake/: CMakeLists.txt.in  external-gtest.cmake
windows/include/: doc.h  sut.h
windows/src/: main.cpp  sut.cpp
windows/test/: CMakeLists.txt  gtest_ex2.cpp
